third_party/move/move-compiler-v2/tests/visibility-checker/v1-typing/pack_unpack_private_script.exp

Diagnostics:
error: Invalid operation: pack on `M::T` can only be done within module `0x42::M`
   ┌─ tests/visibility-checker/v1-typing/pack_unpack_private_script.move:11:9
   │
11 │     fun main() {
   │         ^^^^
12 │         let t = T {  };
   │                 ------ pack here

error: Invalid operation: unpack on `M::T` can only be done within module `0x42::M`
   ┌─ tests/visibility-checker/v1-typing/pack_unpack_private_script.move:11:9
   │
11 │     fun main() {
   │         ^^^^
12 │         let t = T {  };
13 │         let T {} = t;
   │             ---- unpack here
